--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -139,27 +139,14 @@
                           <div class="bio-row">
                             <p>Username: <span th:text="${user.username}"></span> </p>
                           </div>
-                          <!--<div class="bio-row">-->
-                            <!--<p><span>Last Name </span>: Smith</p>-->
-                          <!--</div>-->
-                          <!--<div class="bio-row">-->
-                            <!--<p><span>Birthday</span>: 27 August 1987</p>-->
-                          <!--</div>-->
-                          <!--<div class="bio-row">-->
-                            <!--<p><span>Country </span>: United</p>-->
-                          <!--</div>-->
-                          <!--<div class="bio-row">-->
-                            <!--<p><span>Occupation </span>: UI Designer</p>-->
-                          <!--</div>-->
+
                           <div class="bio-row">
                             <p>Email :<span th:text="${user.email}"></span></p>
                           </div>
                           <div class="bio-row">
                             <p>Mobile : <span th:text="${user.phonenumber}"> </span></p>
                           </div>
-                          <!--<div class="bio-row">-->
-                            <!--<p><span>Phone </span>: (+021) 956 789123</p>-->
-                          <!--</div>-->
+
                         </div>
                       </div>
                     </section>
@@ -172,52 +159,96 @@
                   <div id="edit-profile" class="tab-pane">
                     <section class="panel">
                       <div class="panel-body bio-graph-info">
-                        <h1> Profile Info</h1>
+                        <!--<h1> Profile Info</h1>-->
                         <form th:action="@{/profile}" method="post" th:object="${user}" class="needs-validation" th:novalidate="novalidate">
-                          <div class="form-group">
+
+                          <div class="form-group row">
                             <label for="username" class="col-lg-2 control-label">Enter the new username</label>
                             <div class="col-lg-6">
                               <input th:field="*{username}" type="text" class="form-control" id="username" />
                             </div>
                           </div>
-                          <div class="form-group">
+                          <div class="form-group row">
                             <label for="email" class="col-lg-2 control-label">Enter the new email</label>
                             <div class="col-lg-6">
-                              <input th:field="*{email}" type="text" class="form-control" id="email"  />
+                              <input th:field="*{email}" type="text" class="form-control" id="email" />
                           </div>
                           </div>
-                          <div class="form-group">
+                          <div class="form-group row">
                             <label for="phoneNumber" class="col-lg-2 control-label">Enter the new phone number</label>
                             <div class="col-lg-6">
                               <input th:field="*{phonenumber}" type="text" class="form-control" id="phoneNumber" placeholder=" "/>
                             </div>
                           </div>
-                            <div class="form-group">
+                            <div class="form-group row">
                                 <label for="password" class="col-lg-2 control-label">Enter the new phone number</label>
                                 <div class="col-lg-6">
                                     <input th:field="*{password}" type="password" class="form-control" id="password" placeholder=" "/>
                                 </div>
                             </div>
                             <!--inputs fro the new password-->
-                            <div class="form-group">
+                            <div class="form-group row">
                                 <label for="new_password" class="col-lg-2 control-label">Enter the new phone number</label>
                                 <div class="col-lg-6">
                                     <input name="newPassword" type="password" class="form-control" id="new_password" placeholder=" "/>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group row">
                                 <label  for="confirm_new_password"  class="col-lg-2 control-label">Enter the new phone number</label>
                                 <div class="col-lg-6">
                                     <input name="confirmNewPassword" type="password" class="form-control" id="confirm_new_password" placeholder=" "/>
                                 </div>
                             </div>
-                          <div class="form-group">
+                          <div class="form-group row">
                             <div class="col-lg-offset-2 col-lg-10">
-                              <button type="submit" class="btn btn-primary">Update</button>
+                              <button type="submit" class="btn btn-primary" id="editSearchButton">Update</button>
                             </div>
                           </div>
+
                         </form>
                       </div>
+                        <div class="row " id="editSearchPanel" style="display: none">
+                            <div class="col-lg-12">
+                                <!--collapse start-->
+                                <div class="panel-group m-bot20" id="accordion">
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <a class="accordion-toggle fa fa-flag-o red" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                                    Flights found
+                                                </a>
+                                                <div class="panel-actions">
+                                                    <a href="#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
+                                                </div>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseOne" class="panel-collapse collapse in ">
+                                            <div class="panel-body">
+                                                <div class="container row">
+                                                    <table class="table table-striped table-advance table-hover container-fluid col-lg-12">
+                                                        <tbody id="editSearchResults">
+                                                        <tr>
+                                                            <th>flight #</th>
+                                                            <th>Departure  <i class="icon_clock"></i></th>
+                                                            <th>Duration <i class="icon_clock_alt"></i></th>
+                                                            <th>flight #</th>
+                                                            <th>Return  <i class="icon_clock"></i></th>
+                                                            <th> Duration<i class="icon_clock_alt"></i></th>
+                                                            <th>Price <i class="fa fa-money"></i></th>
+                                                            <th class="text-center">Airline<i class="fa fa-plane"></i></th>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <!--collapse end-->
+
+                            </div>
+                        </div>
                     </section>
                   </div>
                 </div>
