--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -110,10 +110,10 @@
             <div class="row">
                 <!-- profile-widget -->
                 <div class="col-lg-12">
-                    <div class="profile-widget profile-widget-info">
-                        <div class="panel-body">
-                        </div>
-                    </div>
+                    <!--<div class="profile-widget profile-widget-info">-->
+                        <!--<div class="panel-body">-->
+                        <!--</div>-->
+                    <!--</div>-->
                 </div>
             </div>
             <!-- page start-->
@@ -124,21 +124,21 @@
                             <ul class="nav nav-tabs">
                                 <li class="active">
                                     <a data-toggle="tab" href="#flights">
-                                        Find Flights!
                                         <i class="fa fa-plane"></i>
+                                        Find Flights!
                                     </a>
                                 </li>
                                 <li>
                                     <a data-toggle="tab" href="#hotel">
                                         <i class="icon-user"></i>
-                                        Find hotels
                                         <i class="fa fa-building"></i>
+                                        Find hotels
                                     </a>
                                 </li>
                                 <li class="">
                                     <a data-toggle="tab" href="#rental">
-                                        Find car rentals
                                         <i class="fa fa-map-marker"></i>
+                                        Find car rentals
                                     </a>
                                 </li>
                                 <!--<li class="">-->
@@ -157,14 +157,14 @@
                                         <h1>Where should we go?</h1>
                                         <form th:action="@{search/home}" method="post" th:object="${search}" class="needs-validation" th:novalidate="novalidate" >
                                             <div class="form-row">
-                                                <div class="col-md-4 mb-3">
+                                                <div class="col-md-6 mb-3">
                                                     <label for="origin">Select Origin</label>
                                                     <input th:field="*{origin}" type="text" id="origin" class="airports form-control" aria-describedby="emailHelp" placeholder="Choose a starting location" th:required="required"/>
                                                     <div class="invalid-feedback">
                                                         Invalid entry
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4 mb-3">
+                                                <div class="col-md-6 mb-3">
                                                     <label for="destination">Select Destination</label>
                                                     <input th:field="*{destination}" type="text" id="destination" class="airports form-control" placeholder="Choose an end point" th:required="required" />
                                                     <div class="invalid-feedback">
@@ -204,15 +204,15 @@
                                             </div>
                                             <div class="form-row">
                                                 <div class="col-md-4 mb-3">
-                                                    <label for="price">name a price</label>
+                                                    <label for="price">Name a Price</label>
                                                     <input th:field="*{price}" type="text" id="price" class="form-control"  placeholder="0.00" th:required="required"/>
                                                     <div class="invalid-feedback">
                                                         Invalid entry
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button id="lowFlight" type="button" class="btn btn-primary">Search flights!</button>
-                                            <button type="submit" class="btn btn-primary">Save search</button>
+                                            <button id="lowFlight" type="button" class="subbtn btn btn-primary" style="float:right;">Search flights!</button>
+                                            <button type="submit" style="float:right; margin-right: 1em" class="subbtn btn btn-primary">Save search</button>
                                         </form>
 
                                     </div>
@@ -230,7 +230,7 @@
                                                                 Flights found
                                                             </a>
                                                             <div class="panel-actions">
-                                                                <a href="#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
+                                                                <!--<a href="#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>-->
                                                             </div>
                                                         </h4>
                                                     </div>
@@ -300,7 +300,7 @@
 
                                             </div>
 
-                                            <button id="cheapHotel" type="button" class="btn btn-primary" >Search hotels!</button>
+                                            <button id="cheapHotel" type="button" class="subbtn btn btn-primary" >Search hotels!</button>
 
                                         </form>
                                     </div>
@@ -350,7 +350,7 @@
                                 <div id="rental" class="tab-pane">
                                     <div class="container">
 
-                                        <h1>Rent a car be ahead of the game!</h1>
+                                        <h1>Rent a car, be ahead of the game!</h1>
                                         <form th:action="@{/search/home}" method="post" th:object="${search}" class="needs-validation" th:novalidate="novalidate" >
                                             <div class="form-row">
                                                 <div class="col-md-4 mb-3" style="display: none">
@@ -380,7 +380,7 @@
 
                                             </div>
 
-                                            <button id="carRental" type="button" class="btn btn-primary" >Search car rentals!</button>
+                                            <button id="carRental" type="button" class="subbtn btn btn-primary" >Search car rentals!</button>
 
                                         </form>
                                     </div>
