--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -131,7 +131,7 @@
                       <td><span th:text="${search.price}"></span></td>
                       <td><span th:text="${search.adults}"></span></td>
                       <td><span th:text="${search.children}"></span></td>
-                      <td><span th:text="${search.id}" ></span></td>
+                      <td style="display:none"><span th:text="${search.id}" ></span></td>
                       <td>
                         <div class="btn-group">
                             <form th:action="@{/search/edit}" method="post">
@@ -198,7 +198,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <button type="submit" class="subbtn btn btn-primary">Save changes</button>
                     </form>
                     </tbody>
                   </table>
@@ -276,10 +276,10 @@
       <div class="row">
         <!-- profile-widget -->
         <div class="col-lg-12">
-          <div class="profile-widget profile-widget-info">
-            <div class="panel-body">
-            </div>
-          </div>
+          <!--<div class="profile-widget profile-widget-info">-->
+            <!--<div class="panel-body">-->
+            <!--</div>-->
+          <!--</div>-->
         </div>
       </div>
       <!-- page start-->
@@ -329,7 +329,7 @@
                         <input th:field="*{action}" type="text" class="textarea" placeholder="What is this reminder for?"/>
                         <span>Select a date and time for the reminder</span>
                         <input th:field="*{date}" type="datetime-local" />
-                      <button type="submit" class="btn btn-primary">Create Reminder</button>
+                      <button type="submit" class="subbtn btn btn-primary">Create Reminder</button>
                     </form>
                     <p>Your reminders</p>
                     <table class="table table-striped table-advance table-hover">
@@ -370,7 +370,7 @@
 
                           </div>
                         </div>
-                        <button id="ent" type="button" class="btn btn-primary" >Search enter!</button>
+                        <button id="ent" type="button" class="subbtn btn btn-primary" >Search enter!</button>
 
 
                       </form>
