--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -22,7 +22,7 @@
           </div>
 
           <!--logo start-->
-          <a href="dashboard.html" class="logo">Viator <span class="lite">Travel</span></a>
+          <a href="/" class="logo">Viator <span class="lite">Travel</span></a>
           <!--logo end-->
 
           <div class="top-nav notification-row">
@@ -95,12 +95,12 @@
         <div class="row">
           <!-- profile-widget -->
           <div class="col-lg-12">
-            <div class="profile-widget profile-widget-info">
-              <div class="panel-body">
+            <!--<div class="profile-widget profile-widget-info">-->
+              <!--<div class="panel-body">-->
 
 
-              </div>
-            </div>
+              <!--</div>-->
+            <!--</div>-->
           </div>
         </div>
         <!-- page start-->
@@ -213,7 +213,7 @@
                             </div>
                           <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
-                              <button type="submit" class="btn btn-primary">Update</button>
+                              <button type="submit" class="subbtn btn btn-primary">Update</button>
                             </div>
                           </div>
                         </form>
