commit before merging to master

--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -307,8 +307,8 @@
                   </div>
                 </div>
                 <!-- profile -->
-                <div id="profile" class="tab-pane">
-                  <di><p>content here</p></di>
+                <div id="reSearch" class="tab-pane">
+                  <di><p>This is a place for the edited search render the new search results</p></di>
                 </div>
                 <!-- edit-profile -->
                 <div id="edit-profile" class="tab-pane">
