chore: rendering map troubleshoot

--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -57,7 +57,7 @@
                                 </li>
                                 <li>
                                     <a href="https://github.com/JNR-Capstone-Project/travelcapstone">
-                                        <i class="icon_profile"></i>
+                                        <i class="fa fa-github"></i>
                                         <span>Documentation</span>
                                     </a>
                                 </li>
@@ -83,7 +83,7 @@
                                 </li>
                                 <li>
                                     <a href="https://github.com/JNR-Capstone-Project/travelcapstone">
-                                        <img src="../../static/Github.png" />
+                                        <i class="fa fa-github"></i>
                                         <span>Documentation</span>
                                     </a>
                                 </li>
