--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -110,7 +110,7 @@
               </div>
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-                  <div class="container">
+                  <div class="container ">
                       <div>
                           <form  th:action="@{/search/saveEdit}" id="editionForm" th:object="${mySearch}" method="post" class="hidden">
                               <h1>Edit Search</h1>
@@ -192,7 +192,7 @@
                       <th><i class="icon_cogs"></i><span>Edit</span><span>Delete</span></th>
                     </tr>
 
-                    <tr th:each="search : ${searches}" class="rows" >
+                    <tr th:each="search : ${searches}" >
                       <td th:text="${search.origin}" class="searchOrigin"></td>
                       <td th:text="${search.destination}" class="searchDestination"></td>
                       <td th:text="${search.simpleDateStart}" class="searchStartDate"></td>
@@ -201,21 +201,18 @@
                       <td th:text="${search.adults}" class="searchAdults"></td>
                       <td th:text="${search.children}" class="searchChildren"></td>
                       <td style="display: none" th:text="${search.id}" class="searchId"></td>
-                      <td class="row">
-                          <div class="btn-group">
+                      <td >
+                          <div class="btn-group d-flex flex-row" >
 
-                                      <button  type="button" class="btn btn-success edit" name="editSavedSearch" th:id="'editSavedSearch' + ${search.id}" th:value="${search.id}" ><i class="icon_plus_alt2"></i></button>
-                                      Edit Search
-
-                              <form th:action="@{/search/deleteSearch}" method="post">
-                                      <button type="submit" class="btn btn-danger" name="deleteSearch" th:id="'deleteSearch' + ${search.id}" th:value="${search.id}"><i class="icon_close_alt2"></i></button>
-                                      Delete Search
+                                      <button  type="button" class="btn btn-success edit" name="editSavedSearch" th:id="'editSavedSearch' + ${search.id}" th:value="${search.id}" ><i class="fa fa-edit flex-wrap "></i></button>
+                              <form th:action="@{/search/deleteSearch}" method="post" >
+                                      <button type="submit" class="btn btn-danger" name="deleteSearch" th:id="'deleteSearch' + ${search.id}" th:value="${search.id}"><i class="icon_close_alt2 "></i></button>
                               </form>
                           </div>
-                          <div class="form-check">
-                              <input type="radio" class="form-check-input" name="gridRadios" th:id="${search.id}" th:value="'option'+ ${search.id}" />
-                              <label th:for="${search.id}">  .. .    Details</label>
-                          </div>
+                          <!--<div class="form-check">-->
+                              <!--<input type="radio" class="form-check-input" name="gridRadios" th:id="${search.id}" th:value="'option'+ ${search.id}" />-->
+                              <!--<label th:for="${search.id}">  .. .    Details</label>-->
+                          <!--</div>-->
                       </td>
                     </tr>
                     </tbody>
@@ -256,7 +253,7 @@
                     Find hotels
                   </a>
                 </li>
-                <li class="" id="car-rental-tag">
+                <li class="" id="car-rental-tag"  style="display: none">
                   <a data-toggle="tab" href="#dash-rental">
                     <i class="icon-envelope"></i>
                     Find car rentals
