--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,4 +1,3 @@
-
 #city { width: 25em; }
 
 #travel-bg{
@@ -22,13 +21,17 @@
     width: 550px;
     border-color: black;
 }
+#hotel-map{
+    height: 350px;
+    width: 550px;
+    border-color: black;
+}
 
 
 .logo2{
     width: 20vh;
     height: 10vh;
-    padding-right: -20px;
-    margin-right: -20px;
+
 }
 
 .subbtn {
