chore: completed maps

--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -103,9 +103,9 @@
                                     <a class="accordion-toggle fa fa-flag-o red" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                                         Your saved flights
                                     </a>
-                                    <div class="panel-actions">
-                                        <a href="dashboard.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
-                                    </div>
+                                    <!--<div class="panel-actions">-->
+                                        <!--<a href="dashboard.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>-->
+                                    <!--</div>-->
                                 </h4>
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
