--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -236,10 +236,10 @@
                                                     </div>
                                                     <div id="collapseOne" class="panel-collapse collapse in ">
                                                         <div class="panel-body">
-                                                            <div class="container row">
+                                                            <div class="container-fluid">
                                                                 <table class="table table-striped table-advance table-hover container-fluid col-lg-12">
-                                                                    <tbody id="flight">
-                                                                    <tr>
+                                                                    <tbody id="flight" class="col-lg-12">
+                                                                    <tr >
                                                                         <th>flight #</th>
                                                                         <th>Departure  <i class="icon_clock"></i></th>
                                                                         <th>Duration <i class="icon_clock_alt"></i></th>
@@ -315,15 +315,15 @@
                                                             <a class="accordion-toggle fa fa-flag-o red" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
                                                                 hotels found
                                                             </a>
-                                                            <div class="panel-actions">
-                                                                <!--this will refresh the search-->
-                                                                <a href="#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
-                                                            </div>
+                                                            <!--<div class="panel-actions">-->
+                                                                <!--&lt;!&ndash;this will refresh the search&ndash;&gt;-->
+                                                                <!--<a href="#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>-->
+                                                            <!--</div>-->
                                                         </h4>
                                                     </div>
                                                     <div id="collapseTwo" class="panel-collapse collapse in ">
                                                         <div class="panel-body">
-                                                            <div class="container">
+                                                            <div class="container-fluid">
                                                                 <table class="table table-striped table-advance table-hover container-fluid col-lg-12">
                                                                     <tbody id="hotels">
                                                                     <tr>
@@ -395,14 +395,14 @@
                                                             <a class="accordion-toggle fa fa-flag-o red" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                                                                 Flights found
                                                             </a>
-                                                            <div class="panel-actions">
-                                                                <a href="dashboard.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
-                                                            </div>
+                                                            <!--<div class="panel-actions">-->
+                                                                <!--<a href="dashboard.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>-->
+                                                            <!--</div>-->
                                                         </h4>
                                                     </div>
                                                     <div id="collapseThree" class="panel-collapse collapse in ">
                                                         <div class="panel-body">
-                                                            <div class="container">
+                                                            <div class="container-fluid">
                                                                 <table class="table table-striped table-advance table-hover container-fluid col-lg-12">
                                                                     <tbody id="cars">
                                                                     <tr>
