--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -324,9 +324,7 @@
                                         <div class="container">
                                             <h1 class="col-lg-12 text-center">Click on a destination</h1>
                                         </div>
-                                        <div id="poiMap" class="container-fluid col-lg-12">
-
-                                        </div>
+                                        <div id="poiMap" class="container-fluid col-lg-12"></div>
 
 
                                         <div id="poiPosts" class="col-lg-12"></div>
