--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -181,20 +181,20 @@
                             </div>
                           </div>
                             <div class="form-group row">
-                                <label for="password" class="col-lg-2 control-label">Enter the new phone number</label>
+                                <label for="password" class="col-lg-2 control-label">Enter your current password</label>
                                 <div class="col-lg-6">
                                     <input th:field="*{password}" type="password" class="form-control" id="password" placeholder=" "/>
                                 </div>
                             </div>
                             <!--inputs fro the new password-->
                             <div class="form-group row">
-                                <label for="new_password" class="col-lg-2 control-label">Enter the new phone number</label>
+                                <label for="new_password" class="col-lg-2 control-label">Enter the new password</label>
                                 <div class="col-lg-6">
                                     <input name="newPassword" type="password" class="form-control" id="new_password" placeholder=" "/>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label  for="confirm_new_password"  class="col-lg-2 control-label">Enter the new phone number</label>
+                                <label  for="confirm_new_password"  class="col-lg-2 control-label">Confirm the new password</label>
                                 <div class="col-lg-6">
                                     <input name="confirmNewPassword" type="password" class="form-control" id="confirm_new_password" placeholder=" "/>
                                 </div>
