--- a/src/main/resources/templates/search/about.html
+++ b/src/main/resources/templates/search/about.html
@@ -11,16 +11,36 @@
 </head>
 
 <body id="travel-bg">
+<div class="container text-center dude row">
 
 
 
-<div class="container">
-
-
+    <div class="card col-lg-3 group">
+        <img class="card-img-top " src="https://s3.amazonaws.com/alumni.codeup.com/RobertoLagoBatista.jpg" alt="Card image cap"/>
+        <div class="card-body">
+            <h5 class="card-title"><strong>Roberto Lago Batista</strong></h5>
+            <p class="card-text">"The results you achieve will be in direct proportion to the effort you apply. - Denis Waitlley"</p>
+            <a href="http://alumni.codeup.com/students/476" class="btn btn-primary">Contact me</a>
+        </div>
+    </div>
+    <div class="card col-lg-3 group">
+        <img class="card-img-top " src="https://s3.amazonaws.com/alumni.codeup.com/JakeJohnson.jpg" alt="Card image cap"/>
+        <div class="card-body">
+            <h5 class="card-title"><strong>Jake Johnson</strong></h5>
+            <p class="card-text">"Sometimes the adventures that don't go as planned are the best ones"</p>
+            <a href="http://alumni.codeup.com/students/475" class="btn btn-primary">Contact me</a>
+        </div>
+    </div>
+    <div class="card col-lg-3  group">
+        <img class="card-img-top " src="https://s3.amazonaws.com/alumni.codeup.com/NestorSalinas.jpg" alt="Card image cap"/>
+        <div class="card-body">
+            <h5 class="card-title"><strong>Nestor Salinas</strong></h5>
+            <p class="card-text">"The secret to getting ahead is getting started -Mark Twain"</p>
+            <a href="http://alumni.codeup.com/students/483" class="btn btn-primary">Contact me</a>
+        </div>
+    </div>
 
 </div>
-
-
 <div class="text-right">
     <div class="credits">
         <!--
