--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -306,10 +306,10 @@
                                 <div id="dash-hotel" class="tab-pane">
                                     <div class="row">
                                         <div class="container">
-                                            <h1 class="col-lg-12 text-center">Click on a destination</h1>
+                                            <h1 class="col-lg-12 text-center">Choose a destination</h1>
 
                                         </div>
-                                        <div id="hotel-map" class="container col-lg-12"></div>
+                                        <div id="hotel-map" class="container-fluid col-lg-12"></div>
 
                                     </div>
                                 </div>
@@ -323,7 +323,7 @@
                                     <div class="row">
 
                                         <div class="container">
-                                            <h1 class="col-lg-12 text-center">Click on a destination</h1>
+                                            <h1 class="col-lg-12 text-center">Choose a destination</h1>
                                         </div>
                                         <div id="poiMap" class="container-fluid col-lg-12">
 
