--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -251,6 +251,9 @@
                                                                     </tr>
                                                                     </tbody>
                                                                 </table>
+                                                                <div id="loading">
+                                                                    <img th:src="@{../../static/Ripple-1s-200px.gif}"/>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
