--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -251,8 +251,8 @@
                                                                     </tr>
                                                                     </tbody>
                                                                 </table>
-                                                                <div id="loading">
-                                                                    <img th:src="@{../../static/Ripple-1s-200px.gif}"/>
+                                                                <div class="loading" style="margin: 0 auto;">
+                                                                    <img th:src="@{/Ripple-1s-200px.gif}"/>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -337,7 +337,9 @@
                                                                     </tr>
                                                                     </tbody>
                                                                 </table>
-
+                                                            </div>
+                                                            <div class="loading" style="margin: 0 auto;">
+                                                                <img th:src="@{/Ripple-1s-200px.gif}"/>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -396,7 +398,7 @@
                                                     <div class="panel-heading">
                                                         <h4 class="panel-title">
                                                             <a class="accordion-toggle fa fa-flag-o red" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                                                Flights found
+                                                                Car Rental Companies
                                                             </a>
                                                             <div class="panel-actions">
                                                                 <a href="dashboard.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
@@ -416,6 +418,9 @@
 
                                                                     </tbody>
                                                                 </table>
+                                                            </div>
+                                                            <div class="loading" style="margin: 0 auto;">
+                                                                <img th:src="@{/Ripple-1s-200px.gif}"/>
                                                             </div>
                                                         </div>
                                                     </div>
