--- a/src/main/resources/templates/search/about.html
+++ b/src/main/resources/templates/search/about.html
@@ -11,11 +11,17 @@
 </head>
 
 <body id="travel-bg">
-<div class="container text-center dude row">
+<div class="jumbotron jumbotron-fluid bg-image">
+
+    <h1 class="text-center" style="color: whitesmoke;" ><strong> Welcome to Viatores Travel</strong></h1>
+    <p class="text-center" style="color: whitesmoke;" > Join our group of Viator junkies and plan your trip</p>
+
+</div>
+
+<div class="container-fluid text-center justify-content-center row m-0">
 
 
-
-    <div class="card col-lg-3 group">
+    <div class="card col-sm-5 col-md-4 col-lg-3 group">
         <img class="card-img-top " src="https://s3.amazonaws.com/alumni.codeup.com/RobertoLagoBatista.jpg" alt="Card image cap"/>
         <div class="card-body">
             <h5 class="card-title"><strong>Roberto Lago Batista</strong></h5>
@@ -23,25 +29,26 @@
             <a href="http://alumni.codeup.com/students/476" class="btn btn-primary">Contact me</a>
         </div>
     </div>
-    <div class="card col-lg-3 group">
+    <div class="card col-sm-5 col-md-4 col-lg-3 group">
         <img class="card-img-top " src="https://s3.amazonaws.com/alumni.codeup.com/JakeJohnson.jpg" alt="Card image cap"/>
         <div class="card-body">
             <h5 class="card-title"><strong>Jake Johnson</strong></h5>
-            <p class="card-text">"Sometimes the adventures that don't go as planned are the best ones"</p>
+            <p class="card-text">"Sometimes the adventures that don't go as planned are the best ones"<br/><br/></p>
             <a href="http://alumni.codeup.com/students/475" class="btn btn-primary">Contact me</a>
         </div>
     </div>
-    <div class="card col-lg-3  group">
+    <div class="card col-sm-5 col-md-4 col-lg-3  group">
         <img class="card-img-top " src="https://s3.amazonaws.com/alumni.codeup.com/NestorSalinas.jpg" alt="Card image cap"/>
         <div class="card-body">
             <h5 class="card-title"><strong>Nestor Salinas</strong></h5>
-            <p class="card-text">"The secret to getting ahead is getting started -Mark Twain"</p>
+            <p class="card-text">"The secret to getting ahead is getting started <br/>-Mark Twain" <br/><br/></p>
             <a href="http://alumni.codeup.com/students/483" class="btn btn-primary">Contact me</a>
         </div>
     </div>
 
 </div>
-<div class="text-right">
+
+<div class="text-right" style="display: none">
     <div class="credits">
         <!--
           All the links in the footer should remain intact.
