Slight css changes to improve clarity

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -134,7 +134,7 @@
                         Hello <span th:text="${user.username}"></span>
                       </div>
                       <div class="panel-body bio-graph-info">
-                        <h1>Bio Graph</h1>
+                        <h1>Account Details</h1>
                         <div class="row">
                           <div class="bio-row">
                             <p>Username: <span th:text="${user.username}"></span> </p>
