--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -24,7 +24,7 @@
     <form class="login-form" th:action="@{/sign-up}" method="post" th:object="${user}" style="position: relative; top: -100px;">
         <div class="login-wrap mt-5">
             <div class="input-group">
-                <span class="input-group-addon"><i class="icon_profile"></i></span>
+                <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
                 <input th:field="*{email}" id="email" name="email" placeholder="enter your email!" class="form-control form-control-sm" type="text" required="" />
             </div>
             <br/>
