--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -136,15 +136,14 @@
                                 </li>
                                 <li class=" col-sm-4 p-0">
                                     <a data-toggle="tab" href="#hotel">
-                                        <i class="icon-user"></i>
                                         <i class="fa fa-building"></i>
-                                        Find hotels
+                                        Find Hotels!
                                     </a>
                                 </li>
                                 <li class=" col-sm-4 p-0">
                                     <a data-toggle="tab" href="#rental">
                                         <i class="fa fa-map-marker"></i>
-                                        Find car rentals
+                                        Find Car Rentals!
                                     </a>
                                 </li>
                                 <!--<li class="">-->
