--- a/src/main/resources/templates/search/about.html
+++ b/src/main/resources/templates/search/about.html
@@ -13,7 +13,7 @@
 <body id="travel-bg">
 <div class="jumbotron jumbotron-fluid bg-image">
 
-    <h1 class="text-center" style="color: whitesmoke;" ><strong> Welcome to Viatores Travel</strong></h1>
+    <h1 class="text-center" style="color: whitesmoke;" ><strong> Welcome to Viatores</strong></h1>
     <p class="text-center" style="color: whitesmoke;" > Join our group of Viator junkies and plan your trip</p>
 
 </div>
